--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Add Google Fonts here-->
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <!--Link your stylesheet here-->
-
+    <link rel="stylesheet" href="css/index.css">
     <title>Document</title>
 </head>
 <body>
@@ -26,7 +28,7 @@
     <section id="home">
         <div class="titles">
             <h1>The Watering Can</h1>
-            <button>Shop Our Indoor Plant Sale</button>
+            <button>Shop Our Indoor Plant Sale!</button>
         </div>
     </section>
     <section id="about">
@@ -38,28 +40,28 @@
     <section id="shop">
         <h2>Our Plants</h2>
         <div class="container">
-            <div class="bgimg succulants">
+            <div class="bgimg succulants one">
             </div>
-            <div class="shopTxt">
+            <div class="shopTxt two">
                 <div>
                     <h3>Succulants</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit fugiat velit perferendis, culpa eum nostrum quo cupiditate incidunt deserunt, perspiciatis nulla ipsam veritatis laudantium! Minus assumenda reiciendis accusamus eveniet saepe!</p>
                     <button>Shop Now!</button>
                 </div>
             </div>
-            <div class="shopTxt">
+            <div class="shopTxt four">
                 <div>
                     <h3>Cacti</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit fugiat velit perferendis, culpa eum nostrum quo cupiditate incidunt deserunt, perspiciatis nulla ipsam veritatis laudantium! Minus assumenda reiciendis accusamus eveniet saepe!</p>
                     <button>Shop Now!</button>
                 </div>
             </div>
-            <div class="bgimg cacti">
+            <div class="bgimg cacti three">
             </div>
-            <div class="bgimg tropicals">
+            <div class="bgimg tropicals five">
 
             </div>
-            <div class="shopTxt">
+            <div class="shopTxt six">
                 <div>
                     <h3>Tropicals</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit fugiat velit perferendis, culpa eum nostrum quo cupiditate incidunt deserunt, perspiciatis nulla ipsam veritatis laudantium! Minus assumenda reiciendis accusamus eveniet saepe!</p>
@@ -72,12 +74,12 @@
         <h2>Get In Touch</h2>
         <div class="left">
             <div>
-                <h3>Find Us Here:</h3>
+                <h3>Find Us Here:</h3><br>
                 <address>123 Plant Lane<br>
                     Bloomfield, Ontario, <br>
                     Canada L2G 0X7
-                </address>
-                <a href="tel:1-613-978-8282">1-613-978-8282</a>
+                </address><br>
+                <a href="tel:1-613-978-8282">+1-613-978-8282</a><br>
                 <a href="mailto:info@thewareringcan.ca">info@thewareringcan.ca</a>
                 <p>@thewateringcan on the socials</p>
             </div>
